--- a/fleetingstates.html
+++ b/fleetingstates.html
@@ -6,9 +6,20 @@
     <title>Fleeting States</title>
     <script>
         // Function to handle checkbox changes
-        function toggleGate(qubit, gate, isChecked) {
+        function toggleHadamard(qubit, gate, isChecked) {
             const endpoint = isChecked ? '/add-gate' : '/remove-gate';
             const url = `${endpoint}?qubit=${qubit}&gate=${gate}`;
+
+            fetch(url)
+                .then(response => response.json())
+                .then(data => {
+                    console.log(data.message);
+                })
+                .catch(error => console.error('Error:', error));
+        }
+        function toggleCNOT(qubit1, qubit2, gate, isChecked){
+            const endpoint = isChecked ? '/add-cnot' : '/remove-cnot';
+            const url = `${endpoint}?qubit1=${qubit1}&qubit2=${qubit2}&gate=${gate}`;
 
             fetch(url)
                 .then(response => response.json())
@@ -21,50 +32,58 @@
 </head>
 <body>
     <h1>Fleeting States</h1>
+
+    <!-- Hadamard Gate Section -->
+    <h2>Hadamard Gate</h2>
     <div>
-        <h2>Qubit 1</h2>
         <label>
-            <input type="checkbox" onchange="toggleGate(1, 'Hadamard', this.checked)" />
-            Hadamard
+            <input type="checkbox" onchange="toggleHadamard(1, 'Hadamard', this.checked)" />
+            Qubit 1
         </label>
         <label>
-            <input type="checkbox" onchange="toggleGate(1, 'X', this.checked)" />
-            X
+            <input type="checkbox" onchange="toggleHadamard(2, 'Hadamard', this.checked)" />
+            Qubit 2
         </label>
         <label>
-            <input type="checkbox" onchange="toggleGate(1, 'Y', this.checked)" />
-            Y
+            <input type="checkbox" onchange="toggleHadamard(3, 'Hadamard', this.checked)" />
+            Qubit 3
         </label>
     </div>
+
+    <!-- CNOT Gate Section -->
+    <h2>CNOT Gate</h2>
     <div>
-        <h2>Qubit 2</h2>
         <label>
-            <input type="checkbox" onchange="toggleGate(2, 'Hadamard', this.checked)" />
-            Hadamard
+            <input type="checkbox" onchange="toggleCNOT(1,2, 'CNOT', this.checked)" />
+            Qubit 1 & 2
         </label>
         <label>
-            <input type="checkbox" onchange="toggleGate(2, 'Z', this.checked)" />
-            Z
+            <input type="checkbox" onchange="toggleCNOT(2,3, 'CNOT', this.checked)" />
+            Qubit 2 & 3
         </label>
         <label>
-            <input type="checkbox" onchange="toggleGate(2, 'CX', this.checked)" />
-            CX
+            <input type="checkbox" onchange="toggleCNOT(3,1, 'CNOT', this.checked)" />
+            Qubit 3 & 1
         </label>
     </div>
+
+    <!-- RY Gate Section -->
+    <!-- 
+    <h2>RY Gate</h2>
     <div>
-        <h2>Qubit 3</h2>
         <label>
-            <input type="checkbox" onchange="toggleGate(3, 'X', this.checked)" />
-            X
+            <input type="checkbox" onchange="toggleGate(1, 'RY', this.checked)" />
+            Qubit 1
         </label>
         <label>
-            <input type="checkbox" onchange="toggleGate(3, 'Y', this.checked)" />
-            Y
+            <input type="checkbox" onchange="toggleGate(2, 'RY', this.checked)" />
+            Qubit 2
         </label>
         <label>
-            <input type="checkbox" onchange="toggleGate(3, 'Z', this.checked)" />
-            Z
+            <input type="checkbox" onchange="toggleGate(3, 'RY', this.checked)" />
+            Qubit 3
         </label>
     </div>
+    -->
 </body>
 </html>
