sending selected quibit and gate information

--- a/public/index.html
+++ b/public/index.html
@@ -89,117 +89,12 @@
       <div class="information-panel">
         <p id="testing"></p>
         <p id="draggedGate"></p>
+        <p id="errorCheck"></p>
         <p id="gate-description">Hadamard Gate creates superposition in a qubit by turning
           into an equal mix of 0 and 1, and 1 into a similar
           combination with a phase difference. This gives equal
           chances of measuring 0 or 1.</p>
       </div>
-        <!-- <div>
-            <label>
-                <input type="checkbox" onchange="toggleHadamard(1, 'Hadamard', this.checked)" />
-                Qubit 1
-            </label>
-            <label>
-                <input type="checkbox" onchange="toggleHadamard(2, 'Hadamard', this.checked)" />
-                Qubit 2
-            </label>
-            <label>
-                <input type="checkbox" onchange="toggleHadamard(3, 'Hadamard', this.checked)" />
-                Qubit 3
-            </label>
-        </div> -->
-    
-        <!-- CNOT Gate Section -->
-        <!-- <h2>CNOT Gate</h2>
-        <div>
-            <label>
-                <input type="checkbox" onchange="toggleCNOT(1,2, 'CNOT', this.checked)" />
-                Qubit 1 & 2
-            </label>
-            <label>
-                <input type="checkbox" onchange="toggleCNOT(2,3, 'CNOT', this.checked)" />
-                Qubit 2 & 3
-            </label>
-            <label>
-                <input type="checkbox" onchange="toggleCNOT(3,1, 'CNOT', this.checked)" />
-                Qubit 3 & 1
-            </label>
-        </div> -->
-
-        <!-- ------------------------------------- Archive ------------------------------------- -->
-
-        <!-- <div class="quibitOne">
-          <h2>Qubit 1</h2>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(1, 'Hadamard', this.checked)"
-            />
-            Hadamard
-          </label>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(1, 'X', this.checked)"
-            />
-            X
-          </label>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(1, 'Y', this.checked)"
-            />
-            Y
-          </label>
-        </div>
-        <div class="quibitTwo">
-          <h2>Qubit 2</h2>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(2, 'Hadamard', this.checked)"
-            />
-            Hadamard
-          </label>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(2, 'Z', this.checked)"
-            />
-            Z
-          </label>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(2, 'CX', this.checked)"
-            />
-            CX
-          </label>
-        </div>
-        <div class="quibitThree">
-          <h2>Qubit 3</h2>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(3, 'X', this.checked)"
-            />
-            X
-          </label>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(3, 'Y', this.checked)"
-            />
-            Y
-          </label>
-          <label>
-            <input
-              type="checkbox"
-              onchange="toggleGate(3, 'Z', this.checked)"
-            />
-            Z
-          </label>
-        </div> -->
 
     <script src="./script.js"></script>
   </body>
