--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./public/style.css" />
-    <title>Fleeting States</title>
+    <title>Index</title>
   </head>
   <body>
     <!-- <img src="./assets/images/title.png"> -->
