--- a/public/interface.html
+++ b/public/interface.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./public/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Fleeting States</title>
   </head>
   <body>
@@ -96,6 +96,6 @@
           chances of measuring 0 or 1.</p>
       </div>
 
-    <script src="./public/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
