--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
       <div class="information-panel">
         <P style="color:#1a6dd9">Success!</P>
         <p id="gate-description"></p>
-          <p id="testing"></p>
+          <!-- <p id="testing"></p>
           <p id="draggedGate"></p>
-          <p id="errorCheck"></p>
+          <p id="errorCheck"></p> -->
       </div>
 
     <script src="./public/script.js"></script>
