--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <title>Fleeting States 2</title>
   </head>
@@ -15,7 +15,7 @@
     <div class="measured-values-interface">
       <div class="apply-gates-panel">
         <!-- Defining the quantum gates -->
-        <p style="color:#1a6dd9; font-size: 20px;">Drag and Drop</p>
+        <p style="color:#1a6dd9; font-size: 20px;">Long Press, Drag and Drop</p>
         <img
         id="hadamard"
         class="dragElement"
@@ -87,13 +87,11 @@
         </div>
       </div>
       <div class="information-panel">
+        <h2 id="status"></h2>
+        <p id="gate-description"></p>
         <p id="testing"></p>
         <p id="draggedGate"></p>
         <p id="errorCheck"></p>
-        <p id="gate-description">Hadamard Gate creates superposition in a qubit by turning
-          into an equal mix of 0 and 1, and 1 into a similar
-          combination with a phase difference. This gives equal
-          chances of measuring 0 or 1.</p>
       </div>
 
     <script src="./script.js"></script>
