Adding rotation functionality and js

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       <div class="information-panel">
         <P style="color:#1a6dd9">Success!</P>
         <p id="gate-description"></p>
+        <p id="gate-description-two"></p>
           <!-- <p id="testing"></p>
           <p id="draggedGate"></p>
           <p id="errorCheck"></p> -->
