--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
         <!-- <button class="rotation-button">
         </button> -->
         <img id="rotation-img" />
-        <div class="rotation-assess">
+        <!-- <div class="rotation-assess">
           <div class="input-group">
             <div class="input-group-btn">
               <button id="down" class="btn btn-default" onclick=" down('0')">
@@ -111,7 +111,7 @@
               </button>
             </div>
           </div>
-        </div>
+        </div> -->
         <h2 id="status"></h2>
         <p id="gate-description"></p>
         <p id="gate-description-two"></p>
